--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,10 +3,10 @@ RUN pip install --upgrade sklearn xgboost
 RUN apt-get update
 RUN apt-get -y install libssl-dev libcurl4-openssl-dev python-dev
 RUN pip install --ignore-installed noaodatalab
-ADD classify.py gradient_boosted/classify.py
-ADD grad.model gradient_boosted/grad.model
-ADD photoz_hm_params_short_dpon_on.py gradient_boosted/photoz_hm_params_short_dpon_on.py
-ADD ../util.py gradient_boosted/util.py
+ADD docker/classify.py gradient_boosted/classify.py
+ADD docker/grad.model gradient_boosted/grad.model
+ADD docker/photoz_hm_params_short_dpon_on.py gradient_boosted/photoz_hm_params_short_dpon_on.py
+ADD util.py gradient_boosted/util.py
 WORKDIR gradient_boosted 
 WORKDIR exports 
 WORKDIR ../../
