Issue with sqlalchemy

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM audreykoz/prospy:latest
 RUN pip install --upgrade sklearn xgboost
-RUN pip install SQLAlchemy
+RUN pip install --upgrade SQLAlchemy
 RUN pip install corner
 RUN apt-get update
 RUN apt-get -y install libssl-dev libcurl4-openssl-dev python-dev
