--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,9 @@
 FROM audreykoz/prospy:latest
 RUN pip install --upgrade sklearn xgboost
-RUN pip install --upgrade SQLAlchemy==1.4.32
-RUN pip install --upgrade pandas==1.4.2
-RUN pip install corner
+RUN conda update conda
+RUN conda install --upgrade pandas==1.4.2
+RUN conda install --upgrade SQLAlchemy==1.4.32
+RUN conda install -c astropy corner
 RUN apt-get update
 RUN apt-get -y install libssl-dev libcurl4-openssl-dev python-dev
 RUN pip install --ignore-installed noaodatalab
