Working state w/extra samples and inflated errors

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,7 +15,7 @@ RUN \
 RUN conda config --add channels http://ssb.stsci.edu/astroconda
 RUN conda install -y python ipython numpy pandas scipy astropy h5py hdf5
 
-RUN conda install -y -c conda-forge emcee dynesty schwimmbad
+RUN conda install -y -c conda-forge emcee dynesty=2.1.4 schwimmbad tdqm
 
 RUN python -m pip install astro-sedpy
 
