Hope this doesn't cause a merge conflict:

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -13,11 +13,11 @@ RUN \
 
 # Install astroconda
 RUN conda config --add channels http://ssb.stsci.edu/astroconda
-RUN conda install -y python ipython numpy pandas scipy astropy h5py hdf5 ipykernel
+RUN conda install -y python ipython numpy pandas scipy astropy h5py hdf5
 
 RUN conda install -y -c conda-forge emcee dynesty schwimmbad
 
-RUN python -m pip install astro-sedpy tdqm
+RUN python -m pip install astro-sedpy tdqm ipykernel
 
 WORKDIR /
 ENV SPS_HOME '/fsps'
