--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -37,11 +37,11 @@ RUN conda install -y -c astropy astroquery corner
 
 RUN python -m pip install astro-sedpy tdqm astro-prospector noaodatalab
 
-ADD classify.py /monocle/classify.py
-ADD gallazzi_05_massmet.txt /monocle/gallazzi_05_massmet.txt
-ADD rf.model /monocle/rf.model
-ADD param_monocle.py /monocle/param_monocle.py
-ADD util.py /monocle/util.py
+# ADD classify.py /monocle/classify.py
+# ADD gallazzi_05_massmet.txt /monocle/gallazzi_05_massmet.txt
+# ADD rf.model /monocle/rf.model
+# ADD param_monocle.py /monocle/param_monocle.py
+# ADD util.py /monocle/util.py
 # ADD __init__.py /monocle/__init__.py
 
 # ENV PATH="${PATH}:/mycode"
