Trying again to fix astro-datalab version issues

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -30,13 +30,14 @@ RUN \
     cd ..                                                                   && \
     rm -rf $mpich_prefix
 
-RUN pip install --ignore-installed --no-cache-dir astro-datalab
+# RUN pip install --ignore-installed --no-cache-dir astro-datalab
 RUN conda install -y python ipython numpy pandas scipy astropy h5py hdf5
 RUN conda install -y ipykernel sqlalchemy psycopg2 requests scikit-learn
 RUN conda install -y -c conda-forge emcee dynesty schwimmbad mpi4py six curl
 RUN conda install -y -c astropy astroquery corner
 
-RUN python -m pip install astro-sedpy tdqm astro-prospector
+RUN python -m pip install astro-sedpy tdqm astro-prospector httplib2 pycurl-requests pyvo specutils
+# RUN pip install --upgrade noaodatalab
 
 # ADD classify.py /monocle/classify.py
 # ADD gallazzi_05_massmet.txt /monocle/gallazzi_05_massmet.txt
